arreglo de login y registro

--- a/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
+++ b/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Index";
     string nombre = ViewBag.nombre;
     string codigo = ViewBag.codigo;
+    string cuenta = ViewBag.cuenta;
 }
 
 <div class="row">
@@ -11,8 +12,8 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-9 text-right">
-                        <div>Cuenta:</div>
-                        <div>Cuenta:</div>
+                        <div>Cuenta</div>
+                        <div>@cuenta</div>
                     </div>
                 </div>
             </div>
@@ -23,7 +24,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-9 text-right">
-                        <div>Nombre:</div>
+                        <div>Nombre</div>
                         <div>@nombre</div>
                     </div>
                 </div>
