--- a/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
+++ b/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
@@ -44,3 +44,36 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <h2>Bienvenido @nombre</h2>
+</div>
+<hr />
+<div class="row">
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-info">
+            <a href="@Url.Action("Create", "usuarios")" class="btn btn-lg btn-info btn-block btn-outline">
+                <h4>
+                    Consultar Saldo
+                </h4>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-red">
+            <a href="@Url.Action("Create", "usuarios")" class="btn btn-lg btn-danger btn-block btn-outline">
+                <h4>
+                    Solicitar Crédito
+                </h4>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-default">
+            <a href="@Url.Action("Create", "usuarios")" class="btn btn-lg btn-default btn-block btn-outline">
+                <h4>
+                    Hacer Transferencia
+                </h4>
+            </a>
+        </div>
+    </div>
+</div>
