--- a/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
+++ b/Usac_Banco/Usac_Banco/Views/usuarios/Index.cshtml
@@ -51,7 +51,7 @@
 <div class="row">
     <div class="col-lg-3 col-md-6">
         <div class="panel panel-info">
-            <a href="@Url.Action("Create", "usuarios")" class="btn btn-lg btn-info btn-block btn-outline">
+            <a href="@Url.Action("Consultar", "usuarios")" class="btn btn-lg btn-info btn-block btn-outline">
                 <h4>
                     Consultar Saldo
                 </h4>
