--- a/Usac_Banco/Usac_Banco/Views/usuarios/AdminInd.cshtml
+++ b/Usac_Banco/Usac_Banco/Views/usuarios/AdminInd.cshtml
@@ -20,7 +20,7 @@
     </div>
     <div class="col-lg-3 col-md-6">
         <div class="panel panel-green">
-            <a href="@Url.Action("Create", "usuarios")" class="btn btn-lg btn-success btn-block">
+            <a href="@Url.Action("Index", "creditoes")" class="btn btn-lg btn-success btn-block">
                 <h4 style="color:white;">
                     Ver Créditos
                 </h4>
