--- a/Usac_Banco/Usac_Banco/Views/usuarios/TransExito.cshtml
+++ b/Usac_Banco/Usac_Banco/Views/usuarios/TransExito.cshtml
@@ -44,10 +44,14 @@
         </div>
     </div>
 </div>
-<h2>Se ha completado su Transferencia </h2>
-<div class="form-group">
-    <div class="col-md-offset-1 col-md-10">
-        <a href="@Url.Action("Index", "usuarios")" class="btn btn-lg btn-danger btn-block">Aceptar</a>
+<div class="row">
+    <h2>Se ha completado su Transferencia </h2>
+</div>
+<div class="row">
+    <div class="form-group">
+        <div class="col-md-offset-1 col-md-10" align="center">
+            <a href="@Url.Action("Index", "usuarios")" class="btn btn-lg btn-danger btn-group">Aceptar</a>
+        </div>
     </div>
 </div>
 
